# S22-Graphics-Project

./: .gitignore  CMakeLists.txt  README.md
src/: Part1.cpp  Part1.hpp  Part2.cpp  Part2.hpp  Part3.cpp  Part3.hpp  globals.cpp  globals.h  main.cpp
src/vector/: CMakeLists.txt  mat_mul.hpp  vec_2.cpp  vec_2.hpp
